--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Website">
+    <title>Cool Website</title>
+    <style>
+        em {
+            font-style: normal;
+        }
+        .Cpp-logo {
+            float: left;
+            margin-right: 10px;
+        }
+
+        p.bigJ {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <h1>j</h1>
+    <p>j</p>
+    <p class ="bigJ">bigger <em>J</em>></p>
+    <a href="https://en.wikipedia.org/wiki/C%2B%2B" target="_blank">
+    <img class="Cpp-logo" src="/images/Cpp-logo.png" alt="Official logo of C++ Language">
 </body>
 </html>
