--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <p>j</p>
     <p class ="bigJ">bigger <em>J</em>></p>
-    <a href="https://en.wikipedia.org/wiki/C%2B%2B" target="_blank">
+    <a href="https://en.wikipedia.org/wiki/C%2B%2B" target="_blank">What is C++</a>
     <img class="Cpp-logo" src="/images/Cpp-logo.png" alt="Official logo of C++ Language">
 </body>
 </html>
