--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             font-style: normal;
         }
         .Cpp-logo {
+            width: 100px;
             float: left;
             margin-right: 10px;
         }
