--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         em {
             font-style: normal;
         }
-        .Cpp-logo {
+        .cpp_logo {
             width: 100px;
             float: left;
             margin-right: 10px;
@@ -25,6 +25,6 @@
     <p>j</p>
     <p class ="bigJ">bigger <em>J</em></p>
     <a href="https://en.wikipedia.org/wiki/C%2B%2B" target="_blank">What is C++</a>
-    <img class="Cpp-logo" src="/images/Cpp-logo.png" alt="Official logo of C++ Language">
+    <img class="cpp_logo" src="/images/Cpp-logo.png" alt="Official logo of C++ Language">
 </body>
 </html>
