created a small somewhat usable website

--- a/index.html
+++ b/index.html
@@ -1,30 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Website">
-    <title>Cool Website</title>
-    <style>
-        em {
-            font-style: normal;
-        }
-        .cpp_logo {
-            width: 100px;
-            float: left;
-            margin-right: 10px;
-        }
-
-        p.bigJ {
-            font-weight: bold;
-        }
-    </style>
-</head>
-<body>
-    <p>j</p>
-    <p class ="bigJ">bigger <em>J</em></p>
-    <a href="https://en.wikipedia.org/wiki/C%2B%2B" target="_blank">What is C++</a>
-    <img class="cpp_logo" src="/images/Cpp-logo.png" alt="Official logo of C++ Language">
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="https://cdn.discordapp.com/avatars/492814629467062274/e1463b20708669c6b3e131dde6d94d64.webp?size=80"/><link rel="apple-touch-icon" href="https://cdn.discordapp.com/avatars/492814629467062274/e1463b20708669c6b3e131dde6d94d64.webp?size=80"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;900&display=swap&family=Stoke:wght@300&display=swap" rel="stylesheet"><link rel="stylesheet" href="/styles/style.css"><link rel="manifest" href="/manifest.json"/><title>Cool Website</title><script defer="defer" src="/static/js/main.5de07890.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="discord_title"><img class="bubble" style="margin-top:25px;margin-left:25px" src="https://cdn.discordapp.com/avatars/492814629467062274/e1463b20708669c6b3e131dde6d94d64.webp?size=80" alt="profile picture of author"><p style="padding-left:110px;padding-top:25px">My Discord: 𝔀𝓪𝓵𝓷𝓾𝓽ᵍᵃᶰᵍ#5297</p></div><div class="text seperated"><h1>Hello, World!</h1><p class="large">I am walnut, a german student aiming to be a full-stack developer one day.<br></p><p>My favourite languge is <a class="hyperlink" href="https://en.wikipedia.org/wiki/C%2B%2B" target="_blank">C++</a> and I feel home when coding back-end.<br>Things I like the most to code are Libraries and APIs, so designing UI is something I appreciate too.<br>Check my <a class="hyperlink" href="https://github.com/hmmWalnuts" target="_blank">github</a> out, if you're interested in what I've done so far.</p></div><div id="root"></div></body></html>
