--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A website containing info about me, while I try to apply some HTML and CSS I learn."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Cool Website</title>
+    <title>My Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
